k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: realtime-chatapp-frontend-deployment
  labels:
    app: realtime-chatapp-frontend
  namespace: realtime-chatapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: realtime-chatapp-frontend
  template:
    metadata:
      labels:
        app: realtime-chatapp-frontend

    spec:
      containers:
        - name: realtime-chatapp-frontend
          image: 979667334110.dkr.ecr.ap-south-1.amazonaws.com/fareshare-frontend:310fde8947b78ffd4e55c5af2b991fb9a840f070-12
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          # env:
          #   - name: VITE_BACKEND_URL
          #     value: "http://mern-backend-service.mern-app.svc.cluster.local:5000"
