k8s/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: realtime-chatapp-frontend-service
  namespace: realtime-chatapp
spec:
  selector:
    app: realtime-chatapp-frontend
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
